2006-03-08 Max Horváth <max.horvath@maxspot.de>
	* fixed small bug where clicking on the start button at the portal page
	  didn't open the wifidog portal, but the requested page
	* updated source to generate a clean PHPdoc output
	* updated PHPdoc generating script

2006-03-07 Max Horváth <max.horvath@maxspot.de>
	* init_php.php now does a 100% strict check for variable types of
	  elements to be processed when magic_quotes are turned on
	* fixed duplicate use of SSL_AVIABLE define in common.php
	  This fixes ticket #95.
	* fixed problens with slashes in htospots_map.php
	  This fixes ticket #97.
	* fixed variable typo in NodeListXML.php
	* introduced new InterfaceElements class which is being used to create
	  HTML code - this reduces HTML markup in PHP code and reduces HTML errors
	  we had i.e. on the node administration page (unclosed div).
	  It is being used on the node administration page now and will be updated
	  for the other admin pages ...
	* when adding an owner or tech officer on the node admin page and pressing
	  enter in the input field the statistics where called (no owner or tech
	  officer was added) - this has been fixed
	* database schema update 35 wasn't compatible with PostgreSQL version 7,
	  the update script has been changed to be compatible with it ...
	  This fixes ticket #94.
	* Gabriel Hahmann did a translation of WiFiDog-Auth in portuguese ... it has
	  been included
	  This fixes ticket #98.
	* on node administration page owners have less rights than admins

2006-03-02 Max Horváth <max.horvath@maxspot.de>
	* converted PNGs to GIFs because Internet Explorer cannot handle alpha
	  transparency of PNGs

2006-02-28 Max Horváth <max.horvath@maxspot.de>
	* the content selector for an owner could produce notices
	* the button add existing content in the content manager will only be shown
	  if content is actually available
	* the start button on the portal page won't be shown anymore if a user
	  didn't access it from a WiFiDog hotspot